# knowledge-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
contrib/: README.md
contrib/wiki-synthesize/: SKILL.md  writer-prompt.md
skills/knowledge-wiki/: SKILL.md  article-conventions.md  conversion-spec.md  episodic-conventions.md  lifecycle-spec.md  orchestration-template.md  pipeline-preamble.md  registry-schema.md  reviewer-checklist.md  search-spec.md  session-context.md  step-0-template.md  tier-spec.md
skills/wiki-absorb/: SKILL.md  analyst-prompt.md  reviewer-prompt.md  verifier-prompt.md  writer-prompt.md
skills/wiki-add/: SKILL.md  analyst-prompt.md  reviewer-prompt.md  writer-prompt.md
skills/wiki-bootstrap/: SKILL.md  analyst-prompt.md  analyst-validation-spec.md  research-agent-prompt.md  research-loop-spec.md  reviewer-prompt.md  writer-prompt.md
skills/wiki-capture/: SKILL.md  analyst-prompt.md  reviewer-prompt.md  writer-prompt.md
skills/wiki-consolidate/: SKILL.md  analyst-prompt.md  consolidate.py  dedup-spec.md  reviewer-prompt.md  writer-prompt.md
skills/wiki-health/: SKILL.md  dashboard-spec.md  empirical-anchor-spec.md
skills/wiki-index/: SKILL.md  convert.py  indexer.py  requirements-convert.txt  requirements.txt  search.py  wikilib.py
skills/wiki-ingest/: SKILL.md  analyst-prompt.md  reviewer-prompt.md  writer-prompt.md
skills/wiki-init/: SKILL.md  analyst-prompt.md  reviewer-prompt.md  writer-prompt.md
tests/: conftest.py  test_consolidate.py  test_convert.py  test_indexer.py  test_search.py  test_wikilib.py
(+69 files in other folders)
